--- a/btlweb_API/html/Home.html
+++ b/btlweb_API/html/Home.html
@@ -789,5 +789,7 @@
 </div>
 </body>
 <script src="/js/JS_ADMIN/apiService.js    "></script>
+<script src="/js/Checklogin.js    "></script>
+
 <script src="/js/trangchu.js"></script>
 </html>
