--- a/btlweb_API/html/ThanhToan.html
+++ b/btlweb_API/html/ThanhToan.html
@@ -137,5 +137,7 @@
 
 </body>
 <script src="/js/JS_ADMIN/apiService.js    "></script>
+<script src="/js/Checklogin.js    "></script>
+
 <script src="/js/ThanhToan.js    "></script>
 </html>
