--- a/btlweb_API/html/ThongTin.html
+++ b/btlweb_API/html/ThongTin.html
@@ -159,6 +159,8 @@
     </script>
 </body>
 <script src="/js/JS_ADMIN/apiService.js    "></script>
+<script src="/js/Checklogin.js    "></script>
+
 <script src="/js/ThongTin.js    "></script>
 
 </html>
