--- a/btlweb_API/html/chitietssanpham.html
+++ b/btlweb_API/html/chitietssanpham.html
@@ -63,12 +63,7 @@
         <div class="sp-content">
                 <div class="anhsp">
                     <img id="anh" src="/anh/phocbe2.jpg" style="height: 350px;width: 90%;" alt="">
-                    <div class="anh" style="width: 90%;height: 80px;margin-top: 10px;justify-content: space-between;display: flex;">
-                        <img class="anh" id="anh1" src="/anh/phocbe2.jpg" style="height: 100%;width: 20%;" alt="">
-                        <img class="anh" id="anh2" src="/anh/phocbe2.jpg" style="height: 100%;width: 20%;" alt="">
-                        <img class="anh" id="anh3" src="/anh/phocbe2.jpg" style="height: 100%;width: 20%;" alt="">
-                        <img class="anh" id="anh4" src="/anh/phocbe2.jpg" style="height: 100%;width: 20%;" alt="">
-                    </div>
+                  
                 </div>
                 <div class="contensp">
                     <p class="gia">
@@ -238,8 +233,7 @@
 
 </body>
 <script src="/js/JS_ADMIN/apiService.js    "></script>
-<script src="/js/trangchu.js"></script>
-
+<script src="/js/Checklogin.js    "></script>
 
 <script src="/js/ctsp.js"></script>
 </html>
