--- a/btlweb_API/html/giohang.html
+++ b/btlweb_API/html/giohang.html
@@ -142,7 +142,7 @@
 
 </body>
 <script src="/js/JS_ADMIN/apiService.js    "></script>
-
+<script src="/js/Checklogin.js    "></script>
 
 <script src="/js/giohang.js"></script>
 
