--- a/btlweb_API/html/dangnhap.html
+++ b/btlweb_API/html/dangnhap.html
@@ -31,10 +31,11 @@
         
         <div class="signup">
             <span>Chưa có tài khoản?</span>
-            <a href="#">Đăng ký tài khoản mới</a>
+            <a href="./dangky.html">Đăng ký tài khoản mới</a>
         </div>
     </div>
 </body>
 <script src="/js/JS_ADMIN/apiService.js    " defer></script>
+
 <script src="/js/dangky.js"></script>
 </html>
