--- a/btlweb_API/html/admin/admin.html
+++ b/btlweb_API/html/admin/admin.html
@@ -65,21 +65,21 @@
                    <div class="thong_ke">
                         <div class="thong_ke_item">
                             <span>Doanh Thu</span>
-                            <h3>20000000000000000</h3>
+                            <h3 id="DoanhThu">20000000000000000</h3>
 
                         </div>
                         <div class="thong_ke_item">
                             <span>Lãi Xuất</span>
-                            <h3>20000000000000000</h3>
+                            <h3 id="LaiXuat">20000000000000000</h3>
                         </div>
                         <div class="thong_ke_item">
                             <span>Tiền Nhập</span>
-                            <h3>20000000000000000</h3>
+                            <h3 id="TienNhap"> 20000000000000000</h3>
 
                         </div>
                         <div class="thong_ke_item">
                             <span>Tiền Bán</span>
-                            <h3>20000000000000000</h3>
+                            <h3 id="TienBan">20000000000000000</h3>
 
                         </div>
                    </div>
