--- a/btlweb_API/html/Home.html
+++ b/btlweb_API/html/Home.html
@@ -14,7 +14,7 @@
                 <img src="/logo.png" alt="Logo">
             </a>
             <div class="search-bar">
-                <input type="text" placeholder="Tìm kiếm sản phẩm...">
+                <input type="text" id="Search_name" placeholder="Tìm kiếm sản phẩm...">
                 <button>
                     <img src="/iconsearch.png" alt="Search" width="20" height="20">
                 </button>
@@ -324,7 +324,8 @@
                 <img src="/anh/vesinh.png" style="height: 100%; width: 50px;" alt="">
             </div>
             <span id="titel_Loai1" >VỆ SINH</span>
-            <span class="sp1">Xem Thêm  </span>
+            
+            <span onclick="getmaloai('maLoai1')"  class="sp1">Xem Thêm <strong style="display: none;" id="maLoai1"></strong> </span>
         </div>
         <hr style="margin-top: 0px;margin-bottom: 0px;">
         <div class="spuathich" id="Loai1">
@@ -421,7 +422,8 @@
                 <img src="/anh/thucan.png" style="height: 100%; width: 50px;" alt="">
             </div>
             <span id="titel_Loai2" >THỨC ĂN CHO MÈO</span>
-            <span class="sp1">Xem Thêm  </span>
+            <span onclick="getmaloai('maLoai2')"  class="sp1">Xem Thêm <strong style="display: none;" id="maLoai2"></strong> </span>
+
         </div>
         <hr style="margin-top: 0px;margin-bottom: 0px;">
         <div class="spuathich" id="Loai2">
@@ -515,7 +517,8 @@
                 <img src="/anh/phukienhamter.png" style="height: 100%; width: 50px;" alt="">
             </div>
             <span id="titel_Loai3">PHỤ KIỆN HAMSTER</span>
-            <span class="sp1">Xem Thêm  </span>
+            <span onclick="getmaloai('maLoai3')"  class="sp1">Xem Thêm <strong style="display: none;" id="maLoai3"></strong> </span>
+
         </div>
         <hr style="margin-top: 0px;margin-bottom: 0px;">
         <div class="spuathich" id="Loai3">
@@ -612,7 +615,8 @@
                 <img src="/anh/long.png" style="height: 100%; width: 50px;" alt="">
             </div>
             <span id="titel_Loai4">CHUỒNG, LỒNG CHO MÈO</span>
-            <span class="sp1">Xem Thêm  </span>
+            <span onclick="getmaloai('maLoai4')"  class="sp1">Xem Thêm <strong style="display: none;" id="maLoai4"></strong> </span>
+
         </div>
         <hr style="margin-top: 0px;margin-bottom: 0px;">
         <div class="spuathich" id="Loai4">
