--- a/btlweb_API/html/ThanhToan.html
+++ b/btlweb_API/html/ThanhToan.html
@@ -13,7 +13,7 @@
                 <img src="/logo.png" alt="Logo">
             </a>
             <div class="search-bar">
-                <input type="text" placeholder="Tìm kiếm sản phẩm...">
+                <input type="text"  id="Search_name"  placeholder="Tìm kiếm sản phẩm...">
                 <button>
                     <img src="/iconsearch.png" alt="Search" width="20" height="20">
                 </button>
