--- a/btlweb_API/html/Home.html
+++ b/btlweb_API/html/Home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Trang chủ shop Líu Lo Pet</title>
     <link rel="stylesheet" href="/css/home.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
@@ -50,7 +50,9 @@
             </a>
         </nav>
     </header>
-    <a href="#danhmuc"><div class="btn_top"> TOP</div></a>
+    <a href="#danhmuc"><div class="btn_top">
+            <img src="../top.png" alt="" width="100%" height="100%">
+    </div></a>
     <div class="menucon">
         <a href="#spuathich">
             <div class="menucon-1">
@@ -762,8 +764,8 @@
         </div>
     </div>
     <hr size="3" color="#f72585"/>
-    <div id="footerr">
-        <div id="footer">
+    <div id="footerr" style="background-color: #fc89af;">
+        <div id="footer" style="background-color: #fc89af;">
             <br/>
             <div id="lienlac">
                 <h2>LIÊN LẠC</h2>
