--- a/btlweb_API/html/chitietssanpham.html
+++ b/btlweb_API/html/chitietssanpham.html
@@ -76,9 +76,9 @@
                     <p class="ton-kho"><strong>Tồn kho:</strong> <span class="ton-kho-status" id="soLuongSp">1000</span></p>
                     <p class="ma-san-pham">Mã sản phẩm: <span class="ma" id="maSp">SP012220</span></p>
                     <ul class="mo-ta">
-                        <li>100% đậu nành tự nhiên, an toàn cho bé</li>
-                        <li>Không bụi, khử mùi tốt</li>
-                        <li>Hạt nhuyễn dùng được cho máy</li>
+                        <li>Cửa hàng bao giá trên toàn quốc</li>
+                        <li>Hỗ trợ khách hàng 100% nếu do lỗi của cửa hàng</li>
+                        <li>Miễn phí Ship ở tỉnh Hưng Yên</li>
                     </ul>
                     <div class="tanggiam" >
                         <div class="btn" onclick="giam()">-</div>
